--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "Localstorage",
     "浏览器存储"
   ],
-  "version": "1.0.0",
+  "version": "1.0.2",
   "private": false,
   "license": "MIT",
   "files": [
@@ -33,7 +33,6 @@
     "build:all": "npm run build:web && npm run build:lib"
   },
   "devDependencies": {
-    "vue": "^3.2.45",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.12",
@@ -52,6 +51,8 @@
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
-    "vue-tsc": "^1.0.12"
+    "vue": "^3.2.45",
+    "vue-tsc": "^1.0.12",
+    "x-localstore": "^1.0.0"
   }
 }
